fix App body is overflowling. #103

--- a/Frontend/book search/css/style.css
+++ b/Frontend/book search/css/style.css
@@ -2,7 +2,7 @@
 
 /* This code sets the background color, height, and background image properties for the body section */
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: linear-gradient(to right bottom, #080b51, #870057, #d13034, #e09100, #a8eb12);
   background-size: cover;
@@ -15,8 +15,7 @@ body {
     */
     .top {
       text-align: right;
-      margin-top: 1%;
-      margin-right: 2%;
+      margin: 1rem;
   }
   
   .top button {
